app/static/css/stylesheet.css
html,
body {
    height: 100%;
    min-width: 324px;
}

p {
    padding: 0;
}

/* Additional Colors */
.bg-black {
    background-color: black;
}

.text-green {
    color: lime;
}

/* Font Styles */

.display-font {
    font-family: 'Ubuntu', sans-serif;
    font-size: 2em;
}

.title-font {
    font-family: 'Audiowide', cursive;
    font-size: 4.5em;
}

.hacker {
    font-family: 'Ubuntu', sans-serif;
}

.fast {
    font-family: 'Audiowide', cursive;
}

/* Cursor ANimation */

.cursorBlink {
    -webkit-animation-name: blink;
    /* Safari 4.0 - 8.0 */
    -webkit-animation-duration: 1s;
    /* Safari 4.0 - 8.0 */
    -webkit-animation-iteration-count: infinite;
    /* Safari 4.0 - 8.0 */
    animation-name: blink;
    animation-duration: 0.7s;
    animation-iteration-count: infinite;
}

/* Safari 4.0 - 8.0 */
@-webkit-keyframes blink {

    from,
    to {
        border-right-color: lime
    }

    50% {
        border-right-color: transparent
    }
}

/* Standard */
@keyframes blink {

    from,
    to {
        border-right-color: lime
    }

    50% {
        border-right-color: transparent
    }
}

/* Typing Animation */

.typing {
    overflow: hidden;
    white-space: nowrap;
    border-right-width: .15em;
    border-right-style: solid;
    border-right-color: lime;
    width: 12em;
    margin: 0 auto;
    color: lime;
    animation: type 1.7s steps(40, end), blink 1s step-end infinite;
}

@keyframes type {
    from {
        width: 0px
    }

    to {
        width: 12em
    }
}

/* Terminal */

.trm-btn {
    width: 10px;
    height: 10px;
}

/* MS PAINT */

.trm-btn2 {
    width: 16px;
    height: 16px;
}

.ms-btn {
    width: 20px;
    height: 20px;
}

.ms-right {
    border-right: 2px solid darkslategray;
}

.ms-top {
    border-top: 2px solid darkslategray;
}

.emboss {
    background-color: #C6C6C6;
    border-bottom: 2px solid darkslategrey;
    border-right: 2px solid darkslategrey;
    border-left: 2px solid #bbbbbb;
    border-top: 2px solid #bbbbbb;
}

.embossBTN {
    background-color: #C6C6C6;
    border-bottom: 2px solid darkslategrey;
    border-right: 2px solid darkslategrey;
    border-left: 2px solid #bbbbbb;
    border-top: 2px solid #bbbbbb;

}

.ebToolbar {
    width: 70px;
    min-width: 70px;
}

.eb {
    cursor: pointer;
}

.embossBTN2 {
    background-color: lightgrey;
    border-top: 2px solid darkslategrey;
    border-left: 2px solid darkslategrey;
    border-right: 2px solid #bbbbbb;
    border-bottom: 2px solid #bbbbbb;
}

.emboss2 {
    background-color: #C6C6C6;
    border-top: 2px solid darkslategrey;
    border-left: 2px solid darkslategrey;
    border-right: 2px solid #bbbbbb;
    border-bottom: 2px solid #bbbbbb;
}

.Blue {
    background-color: blue;
}

.menuBTN {
    border: 2px solid transparent;
    cursor: pointer;
}

.menuBTN:hover {
    background-color: blue;
    color: white;
    border: 2px solid transparent;
}

.menuBTN:active {
    background-color: #a8a8a8;
    border-top: 2px solid darkslategrey;
    border-left: 2px solid darkslategrey;
    border-right: 2px solid #bbbbbb;
    border-bottom: 2px solid #bbbbbb;
    color: black;
}

.menuBTN a {
    color: black;
    text-decoration: none; /* no underline */
  }

.menuBTN:hover a {
    color: white;
}

.menuBTN:active a {
    color: black;
}

.inner-shadow {
    -webkit-box-shadow: inset 0px 0px 8px 3px rgba(0, 0, 0, 0.67);
    -moz-box-shadow: inset 0px 0px 8px 3px rgba(0, 0, 0, 0.67);
    box-shadow: inset 0px 0px 8px 3px rgba(0, 0, 0, 0.67);
} 

.vapor-font {
    font-family: "Lucida Console", Monaco, monospace;
    font-size: 2em;
}

.canvas {
    height: 400px;
    max-height: 400px;
    overflow: hidden;
}

/* XS to SM */

@media (min-width: 0px) and (max-width: 660px) {
    .title-font {
        font-family: 'Audiowide', cursive;
        font-size: 2.5em;
    }

    .display-font {
        font-family: 'Ubuntu', sans-serif;
    }

    .hacker {
        font-family: 'Ubuntu', sans-serif;
    }

}

/* SM to LG */

@media (min-width: 660px) and (max-width: 992px) {
    .title-font {
        font-family: 'Audiowide', cursive;
        font-size: 3em;
    }

    .display-font {
        font-family: 'Ubuntu', sans-serif;
        font-size: 1.5em;
    }
}

